syntax = "proto3";

package app.krail.bff.proto;

option java_package = "app.krail.bff.proto";
option java_multiple_files = true;

// Journey list response - contains all journey options
message JourneyList {
  repeated JourneyCardInfo journeys = 1;
}

// Journey Card Info - represents a single journey option
message JourneyCardInfo {
  string time_text = 1; // "in x mins"
  optional string platform_text = 2; // "Platform 1"
  optional string platform_number = 3; // "1", "2", "A" etc
  string origin_time = 4; // "11:30pm"
  string origin_utc_date_time = 5; // "2024-09-24T19:00:00Z"
  string destination_time = 6; // "11:40pm"
  string destination_utc_date_time = 7; // "2024-09-24T19:00:00Z"
  string travel_time = 8; // "10 mins"
  optional string total_walk_time = 9; // "5 mins"
  repeated TransportModeLine transport_mode_lines = 10;
  repeated Leg legs = 11;
  int32 total_unique_service_alerts = 12;
  optional DepartureDeviation departure_deviation = 13;
}

// Transport Mode Line
message TransportModeLine {
  string line_name = 1; // "T1", "L1" etc
  int32 transport_mode_type = 2; // Product class: 1=Train, 2=Metro, 4=Light Rail, 5=Bus, etc
}

// Leg - can be either walking or transport
message Leg {
  oneof leg_type {
    WalkingLeg walking_leg = 1;
    TransportLeg transport_leg = 2;
  }
}

// Walking Leg
message WalkingLeg {
  string duration = 1; // "10 mins"
}

// Transport Leg
message TransportLeg {
  TransportModeLine transport_mode_line = 1;
  optional string display_text = 2; // "towards Liverpool" or "Burwood to Liverpool"
  string total_duration = 3; // "12 mins"
  repeated Stop stops = 4;
  optional WalkInterchange walk_interchange = 5;
  repeated ServiceAlert service_alert_list = 6;
  optional string trip_id = 7;
}

// Stop information
message Stop {
  string name = 1; // "Central Station, Platform 1"
  string time = 2; // "12:00pm"
  bool is_wheelchair_accessible = 3;
}

// Walk Interchange
message WalkInterchange {
  string duration = 1; // "5 mins"
  WalkPosition position = 2;
}

// Walk Position enum
enum WalkPosition {
  WALK_POSITION_UNSPECIFIED = 0;
  BEFORE = 1; // Walk before the leg starts
  AFTER = 2; // Walk after the leg ends
  IDEST = 3; // Entire leg is walking
}

// Service Alert
message ServiceAlert {
  string id = 1;
  string subtitle = 2;
  string content = 3;
  string priority = 4; // "veryLow", "low", "normal", "high", "veryHigh"
  optional string url = 5;
}

// Departure Deviation
message DepartureDeviation {
  oneof deviation_type {
    string late = 1; // "5 mins late"
    string early = 2; // "2 mins early"
    bool on_time = 3; // true
  }
}


